--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -23,10 +23,11 @@
     margin-left: 28px
 @media (max-width: 768px)
   .navbar
+    padding-bottom: 21px
     &__contacts 
       display: none
     &__logo
-      img 
         width: 90px
     &__button
       padding: 15px 26px
+      font-size: 10px
