--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
+  color: #333333;
 }
 
 img {
@@ -19,7 +20,7 @@ img {
 
 @media (max-width: 768px) {
   .container {
-    max-width: 580px;
+    max-width: 480px;
     width: 95%;
   }
 }
@@ -29,6 +30,12 @@ img {
   background-color: #ffd200;
   border: none;
   padding: 18px 30px;
+}
+
+@media (max-width: 400px) {
+  .container {
+    max-width: 275px;
+  }
 }
 
 .navbar {
@@ -86,14 +93,165 @@ img {
 }
 
 @media (max-width: 768px) {
+  .navbar {
+    padding-bottom: 21px;
+  }
   .navbar__contacts {
     display: none;
   }
-  .navbar__logo img {
+  .navbar__logo {
     width: 90px;
   }
   .navbar__button {
     padding: 15px 26px;
+    font-size: 10px;
+  }
+}
+
+.hero {
+  background-color: #f5f5f5;
+}
+
+.hero-block {
+  padding-top: 50px;
+  padding-bottom: 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hero-text {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-right: 55px;
+}
+
+.hero-text__title {
+  font-size: 41px;
+  font-weight: 800;
+  margin-top: 20px;
+  margin-bottom: 35px;
+  line-height: 1.4em;
+}
+
+.hero-text__subtitle {
+  font-size: 20px;
+  font-weight: 800;
+  margin-bottom: 64px;
+  display: block;
+}
+
+.hero-list {
+  margin: 0;
+  padding: 0;
+}
+
+.hero-item:not(:last-child) {
+  margin-bottom: 23px;
+}
+
+.hero-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero-item__img {
+  width: 40px;
+  height: 40px;
+  border: 2px solid #ffd200;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 30px;
+}
+
+.hero-item__text {
+  max-width: 231px;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.hero-img {
+  margin-right: -35px;
+}
+
+@media (max-width: 1200px) {
+  .hero-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .hero-text {
+    padding: 0;
+    max-width: 70%;
+  }
+  .hero-text__title {
+    font-size: 30px;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+  .hero-text__subtitle {
+    font-size: 18px;
+    margin-bottom: 35px;
+  }
+  .hero-img {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-block {
+    padding-top: 35px;
+    padding-bottom: 52px;
+  }
+  .hero-text {
+    max-width: 100%;
+  }
+  .hero-text__title {
+    font-size: 24px;
+    font-weight: 400;
+    margin-bottom: 4px;
+    line-height: 30px;
+  }
+  .hero-text__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 28px;
+  }
+  .hero-item:not(:last-child) {
+    margin-bottom: 17px;
+  }
+  .hero-item__img {
+    margin-right: 10px;
+    width: 38px;
+    height: 38px;
+  }
+  .hero-item__text {
+    font-size: 12px;
+    line-height: 15px;
+    max-width: 200px;
+  }
+  .hero-img {
+    margin-top: 35px;
+    margin-right: -20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
