--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,5 +1,5 @@
 body
-  font-family: sans-serif
+  @include reg
   color: $text-color
 img
   max-width: 100%
@@ -17,7 +17,7 @@ img
   border-radius: 10px
   background-color: $main-color
   border: none
-  padding: 18px 30px
+  padding: 18px 30px 17px
 @media (max-width: 400px)
   .container
     max-width: 275px
