--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,8 @@
 @import 'color'
+@import 'fonts'
 @import 'interface'
 // Стили шапки 
 @import 'blocks/navbar'
 //  Стили секции hero 
 @import 'blocks/hero'
+// Стили шрифтов
