--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -13,14 +13,18 @@
     align-items: flex-end
   &__address
     font-size: 13px
+    line-height: normal
+    margin-top: 1px
   &__phone
+    +bold
     color: $text-color
     font-size: 20px
-    font-weight: 400
-    margin-top: 9px
+    margin-top: 6px
+    margin-bottom: 10px
     text-decoration: none
   &__button
-    margin-left: 28px
+    margin-left: 31px
+    margin-bottom: 8px
 @media (max-width: 768px)
   .navbar
     padding-bottom: 21px
