--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,8 +1,10 @@
-@import 'color'
+// Стили шрифтов
 @import 'fonts'
+@import 'color'
 @import 'interface'
 // Стили шапки 
 @import 'blocks/navbar'
 //  Стили секции hero 
 @import 'blocks/hero'
-// Стили шрифтов
+//  Стили секции ofeer 
+@import 'blocks/offer'
