--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -20,9 +20,12 @@
     margin-top: 0
     max-width: 350px
     margin-bottom: 18px
+    font-size: 24px
+    text-align: left
   &__subtitle
     margin-bottom: 29px
     max-width: 235px
+    text-align: left
   &__input
     margin-bottom: 28px
     width: 240px
