--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,3 +8,7 @@
 @import 'blocks/hero'
 //  Стили секции ofeer 
 @import 'blocks/offer'
+//  Стили секции portfolio 
+@import 'blocks/portfolio'
+//  Стили секции с ценами 
+@import 'blocks/price'
