--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -1,5 +1,7 @@
 .navbar
   padding: 8px 0
+  display: flex
+  align-items: center
   &-block
     display: flex
     justify-content: space-between
@@ -27,7 +29,7 @@
     margin-bottom: 8px
 @media (max-width: 768px)
   .navbar
-    padding-bottom: 21px
+    padding: 8px 0 4px
     &__contacts 
       display: none
     &__logo
