Сверстал блок с пятью шагами до ремонта, адаптировал его

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -24,6 +24,7 @@ img
     font-size: 30px
     line-height: 45px
     text-align: center
+    margin: auto    
     +bold
   &-subtitle
     font-size: 16px
