--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,3 +12,5 @@
 @import 'blocks/portfolio'
 //  Стили секции с ценами 
 @import 'blocks/price'
+//  Стили секции с программой подготовки
+@import 'blocks/programm'
