--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,6 +56,7 @@ img {
   font-size: 30px;
   line-height: 45px;
   text-align: center;
+  margin: auto;
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
 }
@@ -505,9 +506,7 @@ img {
 }
 
 .portfolio__title {
-  text-align: center;
   width: 600px;
-  margin: auto;
   margin-bottom: 70px;
 }
 
@@ -671,6 +670,137 @@ img {
   }
   .card__link {
     margin-top: 15px;
+  }
+}
+
+.programm {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.programm__title {
+  width: 655px;
+  margin-bottom: 59px;
+}
+
+.programm__subtitle {
+  margin-bottom: 58px;
+}
+
+.step {
+  width: 155px;
+  text-align: center;
+}
+
+.step:not(:last-child):before {
+  content: '';
+  display: block;
+  background: url("../img/programm/arrow.png");
+  width: 72px;
+  height: 25px;
+  margin-left: 170px;
+}
+
+.step:last-child::before {
+  content: '';
+  display: block;
+  width: 72px;
+  height: 25px;
+}
+
+.steps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.step__icon {
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  border: 3px solid #ffd200;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  margin-bottom: 30px;
+}
+
+.step__text {
+  line-height: 20px;
+  font-size: 14px;
+}
+
+@media (max-width: 1200px) {
+  .step {
+    width: 130px;
+  }
+  .step:not(:last-child):before {
+    background: url("../img/programm/arrow-medium.png");
+    width: 49px;
+    height: 16px;
+    margin-left: 120px;
+  }
+  .step:last-child::before {
+    width: 49px;
+    height: 16px;
+  }
+  .step__icon {
+    width: 80px;
+    height: 80px;
+  }
+  .step__img {
+    width: 35px;
+    height: 35px;
+  }
+  .step__text {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 768px) {
+  .programm {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .programm__title {
+    font-size: 18px;
+    line-height: normal;
+    width: 236px;
+    margin-bottom: 27px;
+  }
+  .programm__subtitle {
+    font-size: 14px;
+    margin-bottom: 34px;
+  }
+  .steps {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .step:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .step:not(:last-child)::before {
+    background: #fff;
+    width: 0;
+    height: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
