Сверстал блок с гарантийными документами, адаптировал его

--- a/src/sass/blocks/_price.sass
+++ b/src/sass/blocks/_price.sass
@@ -34,7 +34,9 @@
       opacity: 0
       transition: 0.2s 
   &__img
-    display: block      
+    display: block   
+    width: 100%
+    min-width: 350px   
   &__text
     padding-top: 39px
     padding-bottom: 40px
