--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -14,3 +14,9 @@
 @import 'blocks/price'
 //  Стили секции с программой подготовки
 @import 'blocks/programm'
+//  Стили секции Split
+@import 'blocks/split'
+//  Стили секции с информацией о помощи
+@import 'blocks/help'
+//  Стили секции с гарантией
+@import 'blocks/guarantee'
