--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,7 @@ body {
   color: #333333;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 img {
@@ -275,7 +276,7 @@ img {
             justify-content: center;
   }
   .hero-text {
-    padding: 0;
+    padding: 0 0 0 10px;
     max-width: 70%;
   }
   .hero-text__title {
@@ -299,6 +300,7 @@ img {
   }
   .hero-text {
     max-width: 100%;
+    padding-left: 0;
   }
   .hero-text__title {
     font-size: 24px;
@@ -356,9 +358,8 @@ img {
 
 .offer__title {
   line-height: 35px;
-  margin-top: 0;
+  margin: 0 0 18px 0;
   max-width: 350px;
-  margin-bottom: 18px;
   font-size: 24px;
   text-align: left;
 }
@@ -422,11 +423,11 @@ img {
   }
   .offer-block {
     padding-right: 60px;
+    padding-left: 10px;
   }
   .offer__title {
     font-size: 21px;
-    margin-top: 0;
-    margin-bottom: 16px;
+    margin: 0 0 16px 0;
   }
   .offer__input {
     width: 100%;
@@ -463,6 +464,7 @@ img {
   .offer-block {
     width: 100%;
     padding-right: 0;
+    padding-left: 0;
   }
   .offer__title {
     font-size: 18px;
@@ -603,6 +605,8 @@ img {
 
 .card__img {
   display: block;
+  width: 100%;
+  min-width: 350px;
 }
 
 .card__text {
@@ -698,7 +702,7 @@ img {
   background: url("../img/programm/arrow.png");
   width: 72px;
   height: 25px;
-  margin-left: 170px;
+  margin-left: 160px;
 }
 
 .step:last-child::before {
@@ -712,9 +716,8 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .step__icon {
@@ -748,11 +751,13 @@ img {
     background: url("../img/programm/arrow-medium.png");
     width: 49px;
     height: 16px;
-    margin-left: 120px;
+    margin-left: 115px;
   }
   .step:last-child::before {
     width: 49px;
     height: 16px;
+    margin-right: 0;
+    margin-left: 0;
   }
   .step__icon {
     width: 80px;
@@ -801,6 +806,200 @@ img {
     background: #fff;
     width: 0;
     height: 0;
+  }
+}
+
+.split {
+  background-color: #ffc000;
+  padding: 100px 0;
+}
+
+.split__text {
+  width: 912px;
+  display: block;
+  line-height: 50px;
+  font-size: 32px;
+  text-align: center;
+  margin: auto;
+}
+
+@media (max-width: 1200px) {
+  .split__text {
+    width: 700px;
+    font-size: 22px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .split {
+    padding: 70px 0;
+  }
+  .split__text {
+    width: 260px;
+    font-size: 18px;
+    line-height: normal;
+  }
+}
+
+.help {
+  padding: 100px 0;
+}
+
+.help__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.block__item {
+  background-color: #f7f7f7;
+  width: 370px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.block__text {
+  display: block;
+  padding: 27px 0 0 26px;
+  line-height: 23px;
+  font-size: 16px;
+  color: #000000;
+  margin-bottom: 63px;
+  width: 306px;
+}
+
+@media (max-width: 1200px) {
+  .help .container {
+    width: 960px;
+  }
+  .block__item {
+    width: 300px;
+  }
+  .block__text {
+    font-size: 14px;
+    padding: 27px 0 0 24px;
+    width: 275px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .help .container {
+    width: 760px;
+  }
+  .block__item {
+    width: 243px;
+  }
+  .block__text {
+    font-size: 12px;
+    width: 236px;
+  }
+}
+
+@media (max-width: 768px) {
+  .help__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .block__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .block__text {
+    margin-bottom: 35px;
+  }
+}
+
+.guarantee {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.guarantee__title {
+  width: 645px;
+  margin-bottom: 90px;
+  margin-top: 0;
+}
+
+.guarantee__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.guarantee__item {
+  width: 270px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.guarantee__img {
+  border: 20px solid #f5f5f5;
+  margin-bottom: 40px;
+}
+
+.guarantee__text {
+  font-size: 18px;
+  line-height: 24px;
+  display: block;
+  color: #000000;
+  text-align: center;
+  width: 289px;
+}
+
+@media (max-width: 1200px) {
+  .guarantee__item {
+    width: 220px;
+  }
+  .guarantee__text {
+    font-size: 15px;
+    line-height: 20px;
+    width: 230px;
+  }
+}
+
+@media (max-width: 768px) {
+  .guarantee__title {
+    font-size: 18px;
+    line-height: normal;
+    width: 220px;
+  }
+  .guarantee__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .guarantee__item:not(:last-child) {
+    margin-bottom: 44px;
+  }
+  .guarantee__img {
+    margin-bottom: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
