--- a/src/sass/_color.sass
+++ b/src/sass/_color.sass
@@ -3,3 +3,5 @@ $text-color: #333333
 $section-color: #f5f5f5
 $input-color: #dddddd
 $border-card: #e8e8e8
+$block-color:  #f7f7f7
+$second-text-color: #000000
