--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -47,7 +47,7 @@
       flex-direction: column
       justify-content: center
     &-text
-      padding: 0
+      padding: 0 0 0 10px
       max-width: 70%
       &__title
         font-size: 30px
@@ -65,6 +65,7 @@
       padding-bottom: 52px
     &-text
       max-width: 100%
+      padding-left: 0
       &__title
         font-size: 24px
         font-weight: 400
