--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -17,9 +17,8 @@
     height: 100%
   &__title
     line-height: 35px
-    margin-top: 0
+    margin: 0 0 18px 0
     max-width: 350px
-    margin-bottom: 18px
     font-size: 24px
     text-align: left
   &__subtitle
@@ -58,10 +57,10 @@
     padding: 50px 0
     &-block
       padding-right: 60px
+      padding-left: 10px
     &__title
       font-size: 21px
-      margin-top: 0
-      margin-bottom: 16px
+      margin: 0 0 16px 0
     &__input
       width: 100%
       margin-bottom: 10px
@@ -89,6 +88,7 @@
     &-block
       width: 100%
       padding-right: 0
+      padding-left: 0
     &__title
       font-size: 18px
       width: 259px
