--- a/src/sass/blocks/_programm.sass
+++ b/src/sass/blocks/_programm.sass
@@ -16,7 +16,7 @@
       background: url("../img/programm/arrow.png")
       width: 72px
       height: 25px
-      margin-left: 170px
+      margin-left: 160px
   &:last-child
     &::before
       content: ''
@@ -25,7 +25,7 @@
       height: 25px        
   &s
     display: flex
-    justify-content: space-between
+    justify-content: space-around
   &__icon
     margin: auto
     width: 100px
@@ -47,11 +47,13 @@
         background: url("../img/programm/arrow-medium.png")
         width: 49px
         height: 16px
-        margin-left: 120px
+        margin-left: 115px
     &:last-child
       &::before
         width: 49px
-        height: 16px 
+        height: 16px
+        margin-right: 0
+        margin-left: 0
     &__icon
       width: 80px
       height: 80px
