--- a/src/sass/_color.sass
+++ b/src/sass/_color.sass
@@ -2,6 +2,9 @@ $main-color: #ffd200
 $text-color: #333333
 $section-color: #f5f5f5
 $input-color: #dddddd
+$placeholder-color: #999999
 $border-card: #e8e8e8
 $block-color:  #f7f7f7
 $second-text-color: #000000
+$brif-color: #ffc000
+$white: #ffffff
