--- a/src/sass/blocks/_portfolio.sass
+++ b/src/sass/blocks/_portfolio.sass
@@ -18,8 +18,11 @@
 @media (max-width: 768px)
   .portfolio
     background: $section-color
-    padding-top: 43px
-    padding-bottom: 64px
+    padding: 35px 0
     &__title
       width: 270px
       font-size: 18px
+      line-height: normal
+      margin-bottom: 45px
+    &__arrows
+      margin-top: 45px
