--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -20,3 +20,5 @@
 @import 'blocks/help'
 //  Стили секции с гарантией
 @import 'blocks/guarantee'
+//  Стили секции сформой для расчета
+@import 'blocks/brif'
