--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -31,8 +31,7 @@ img
     font-size: 16px
     display: block
     text-align: center
-.input
-  color: $input-color
+.input 
   padding: 26px
   border: 1px solid #dddddd
   border-radius: 10px
@@ -40,17 +39,22 @@ img
   &:focus
     outline: none
     border: 1px solid $main-color
+  &::placeholder
+     color: $placeholder-color
 .arrows
   &__left, &__right
     &:hover
       cursor: pointer
 @media (max-width: 1200px)
   .container
+    width: 960px
+@media (max-width: 992px)
+  .container
     width: 760px
 @media (max-width: 768px)
   .container
-    max-width: 480px
+    max-width: 390px
     width: 95%
 @media (max-width: 400px)
   .container
-    max-width: 275px
+    max-width: 300px
