--- a/src/sass/blocks/_guarantee.sass
+++ b/src/sass/blocks/_guarantee.sass
@@ -32,10 +32,12 @@
       width: 230px
 @media (max-width: 768px)
   .guarantee
+    padding-top: 20px
     &__title
       font-size: 18px
       line-height: normal
       width: 220px
+      margin-bottom: 50px
     &__block
       flex-direction: column
       align-items: center
@@ -44,4 +46,3 @@
         margin-bottom: 44px
     &__img
       margin-bottom: 20px
-    
