--- a/src/sass/blocks/_help.sass
+++ b/src/sass/blocks/_help.sass
@@ -41,6 +41,7 @@
       width: 236px
 @media (max-width: 768px)
   .help
+    padding: 50px 0
     &__block
       flex-direction: column
       align-items: center
