--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -27,7 +27,7 @@
     margin-bottom: 23px
   &-item
     display: flex
-    align-items: center  
+    align-items: center
     &__img
       width: 40px
       height: 40px
@@ -42,6 +42,21 @@
       font-size: 14px
       line-height: 24px
 @media (max-width: 1200px)
+  .hero
+    &-item
+      &:not(:last-child)
+        margin-bottom: 20px
+    &-text
+      flex-basis: 55%
+      &__title
+        font-size: 32px
+        margin-top: 17px
+        margin-bottom: 30px
+        line-height: normal
+      &__subtitle
+        font-size: 18px
+        margin-bottom: 45px
+@media (max-width: 992px)
   .hero
     &-block
       flex-direction: column
@@ -61,8 +76,8 @@
 @media (max-width: 768px)
   .hero
     &-block
-      padding-top: 35px
-      padding-bottom: 52px
+      padding-top: 25px
+      padding-bottom: 15px
     &-text
       max-width: 100%
       padding-left: 0
@@ -77,7 +92,7 @@
         margin-bottom: 28px
     &-item:not(:last-child)
       margin-bottom: 17px
-    &-item      
+    &-item
       &__img
         margin-right: 10px
         width: 38px
@@ -86,5 +101,5 @@
         font-size: 12px
         line-height: 15px
         max-width: 200px
-    &-img      
-        margin-top: 35px
+    &-img
+      margin-top: 35px
