--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -1,6 +1,5 @@
-.section.offer
-  padding-top: 75px
 .offer
+  padding-top: 75px
   position: relative
   &-block
     width: 50%
@@ -44,15 +43,31 @@
     font-size: 15px
     &__text
       width: 225px
-      line-height: 24px 
-      &_right 
-        padding-left: 25px  
+      line-height: 24px
+      &_right
+        padding-left: 25px
     &__phone
       display: block
       text-decoration: none
       +bold
       color: $text-color
 @media (max-width: 1200px)
+  .offer
+    &-block
+      padding-right: 70px
+    &__input
+      width: 197px
+      padding-left: 15px
+      &::placeholder
+        font-size: 14px
+    &__button
+      font-size: 14px
+    &-feedback
+      &__text
+        font-size: 12px
+        &_right
+          padding-left: 40px
+@media (max-width: 992px)
   .offer
     padding: 50px 0
     &-block
@@ -62,11 +77,11 @@
       font-size: 21px
       margin: 0 0 16px 0
     &__input
-      width: 100%
       margin-bottom: 10px
       min-height: 60px
       padding: 20px
       font-size: 12px
+      width: 100%
       &:first-child
         margin-right: 0
     &__button
@@ -80,7 +95,7 @@
           padding-left: 0
 @media (max-width: 768px)
   .offer
-    padding: 53px 0
+    padding: 35px 0
     &::before
       background: none
       width: 0
@@ -105,7 +120,7 @@
       font-size: 14px
       max-width: 400px
       padding: 0 60px
-    &-feedback 
+    &-feedback
       flex-direction: column
       &__text
         font-size: 15px
