Сверстал и подключил модальное окно Перезвонить мне

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -22,3 +22,5 @@
 @import 'blocks/guarantee'
 //  Стили секции сформой для расчета
 @import 'blocks/brif'
+//  Стили модального окна
+@import 'blocks/popup'
