--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -6,8 +6,14 @@ body
   margin: 0
   padding: 0
   overflow-x: hidden
+  &.lock
+    overflow: hidden
 img
   max-width: 100%
+.wrapper
+  overflow: hidden
+  min-height: 100%
+
 .container
   width: 1170px
   margin: auto
@@ -19,19 +25,19 @@ img
   &:hover
     background-color: lighten($main-color, 10%)
     cursor: pointer
-.section 
+.section
   padding-bottom: 90px
   &-title
     font-size: 30px
     line-height: 45px
     text-align: center
-    margin: auto    
+    margin: auto
     +bold
   &-subtitle
     font-size: 16px
     display: block
     text-align: center
-.input 
+.input
   padding: 26px
   border: 1px solid #dddddd
   border-radius: 10px
@@ -40,7 +46,7 @@ img
     outline: none
     border: 1px solid $main-color
   &::placeholder
-     color: $placeholder-color
+    color: $placeholder-color
 .arrows
   &__left, &__right
     &:hover
